adding rows and columns to the table

--- a/Library. SZ/templates/index.html
+++ b/Library. SZ/templates/index.html
@@ -5,6 +5,19 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Welcome to the online library created by a student of SRH Berlin - Sergey Zaytsev</h1>
-    <p>Explore our collection of books, films and magazines.</p>
+    <div class = "content">
+        <h1>Welcome to the Online Library by Sergey Zaytsev</h1>
+        <table>
+            <tr>
+                <th>Books</th>  
+                <th>Films</th>
+                <th>Magazines</th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+    </div>  
 {% endblock %}
