--- a/Library. SZ/static/css/main.css
+++ b/Library. SZ/static/css/main.css
@@ -1,6 +1,12 @@
 body {
-    font-family: Georgia, sans-serif;
+    font-family: sans-serif;
     margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
+    background-color: #ffffff;
+}
+
+table, th, td {
+    border: 1px solid black;   
+    border-collapse: collapse; 
+    padding: 8px;              
+
 }
