--- a/Library. SZ/templates/master.html
+++ b/Library. SZ/templates/master.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>{% block title %}Online Library{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     {% block head %}{% endblock %}
 </head>
 <body>
-    {% block body %}{% endblock %}
+    <header>
+        <h1>Online Library</h1>
+        <nav>
+            <a href="/">Home</a> |
+            <a href="/books">Books</a> |
+            <a href="/magazines">Magazines</a> |
+            <a href="/films">Films</a>
+        </nav>
+    </header>
+
+    <main>
+        {% block body %}{% endblock %}
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Online Library</p>
+    </footer>
 </body>
 </html>
