--- a/Library. SZ/static/css/main.css
+++ b/Library. SZ/static/css/main.css
@@ -7,6 +7,186 @@ body {
 table, th, td {
     border: 1px solid black;   
     border-collapse: collapse; 
-    padding: 8px;              
+    padding: 8px;  
+}            
 
+body.home {
+    background-image: url("../img/home.png");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+body.books {
+    background-image: url("../img/books.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+body.magazines {
+    background-image: url("../img/magazines.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+body.films {
+    background-image: url("../img/films.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+/* TABLE STYLES */
+
+body.books table tr td:nth-child(odd),
+body.books table tr th:nth-child(odd) {
+    background-color: #5f5f5f8c; 
+}
+
+body.books table tr td:nth-child(even),
+body.books table tr th:nth-child(even) {
+    background-color: #a5a5a586; 
+}
+body.books table {
+    width: 80%;              
+    margin-top: 40px;        
+    border-collapse: collapse;
+}
+
+body.books th, 
+body.books td {
+    padding: 10px;           
+    text-align: left;
+}
+body.books table, 
+body.books th, 
+body.books td {
+    border: 2px solid #000;     
+    border-collapse: collapse;
+}
+
+body.magazines table tr td:nth-child(odd),
+body.magazines table tr th:nth-child(odd) {
+    background-color: #5f5f5f8c; 
+}
+
+body.magazines table tr td:nth-child(even),
+body.magazines table tr th:nth-child(even) {
+    background-color: #a5a5a586; 
+}
+body.magazines table {
+    width: 80%;                    
+    margin-top: 40px;        
+    border-collapse: collapse;
+}
+
+body.magazines th, 
+body.magazines td {
+    padding: 10px;           
+    text-align: left;
+}
+body.magazines table, 
+body.magazines th, 
+body.magazines td {
+    border: 2px solid #000;     
+    border-collapse: collapse;
+}
+
+body.films table tr td:nth-child(odd),
+body.films table tr th:nth-child(odd) {
+    background-color: #5f5f5f8c;
+}
+
+body.films table tr td:nth-child(even),
+body.films table tr th:nth-child(even) {
+    background-color: #a5a5a586;  
+}
+body.films table {
+    width: 80%;                    
+    margin-top: 40px;        
+    border-collapse: collapse;
+}
+
+body.films th, 
+body.films td {
+    padding: 10px;           
+    text-align: left;
+}
+body.films table, 
+body.films th, 
+body.films td {
+    border: 2px solid #000;     
+    border-collapse: collapse;
+}
+
+/* TEXT FORMAT */
+
+body.books th {
+    text-align: center;
+    font-weight: bold;          
+    font-size: 1.3em;           
+    text-transform: uppercase;  
+    color: #000000;                
+}
+
+body.books td {
+    font-size: 1.2em;             
+    color: #000000;                
+    line-height: 1.4;           
+}
+
+body.magazines th {
+    text-align: center;
+    font-weight: bold;          
+    font-size: 1.3em;           
+    text-transform: uppercase;  
+    color: #000000;                
+}
+
+body.magazines td {
+    font-size: 1.2em;             
+    color: #000000;                
+    line-height: 1.4;           
+}
+
+body.films th {
+    text-align: center;
+    font-weight: bold;          
+    font-size: 1.3em;           
+    text-transform: uppercase;  
+    color: #000000;                
+}
+
+body.films td {
+    font-size: 1.2em;             
+    color: #000000;                
+    line-height: 1.4;           
+}
+
+/* SPECIAL HEADERS */
+
+body.books header h1 {
+    color: #fc6501;
+}
+
+body.magazines header h1 {
+    color: #0010f6;
+}
+
+body.films header h1 {
+    color: #ffffff;   
+}
+
+body.books h2 {
+    color: #fc6501
+}
+
+body.films h2 {
+    color: #ffffff;
+}
+
+body.magazines h2 {
+    color: #0010f6;
 }
