--- a/Library. SZ/templates/master.html
+++ b/Library. SZ/templates/master.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     {% block head %}{% endblock %}
 </head>
-<body>
+<body class="{{ mode if mode else 'home' }}">
     <header>
         <h1>Online Library</h1>
         <nav>
