--- a/Library. SZ/templates/master.html
+++ b/Library. SZ/templates/master.html
@@ -23,7 +23,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Online Library</p>
+        <p> SRH. Advanced Programming. Sergey Zaytsev. Project: "Online Library"</p>
     </footer>
 </body>
 </html>
