--- a/Library. SZ/static/css/main.css
+++ b/Library. SZ/static/css/main.css
@@ -190,3 +190,33 @@ body.films h2 {
 body.magazines h2 {
     color: #0010f6;
 }
+
+/* SEARCH FORM*/
+.search-form {
+    text-align: center;   
+    margin: 20px 0;       
+}
+
+.search-form input[type="text"] {
+    width: 60%;           
+    padding: 10px;        
+    font-size: 1em;       
+    border: 2px solid #000;
+    border-radius: 6px;   
+}
+
+/* ADD FORM*/
+
+.add-form {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    float: right;              
+    width: 300px;              
+    margin: 1px;              
+    background-color: rgba(255, 255, 255, 0.85); 
+    padding: 15px;
+    border: 2px solid #000;
+    border-radius: 8px;
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.3);     
+}
