--- a/Library. SZ/static/css/main.css
+++ b/Library. SZ/static/css/main.css
@@ -1,3 +1,7 @@
+main {
+    padding-bottom: 50px; 
+}
+
 body {
     font-family: sans-serif;
     margin: 0;
@@ -219,4 +223,82 @@ body.magazines h2 {
     border: 2px solid #000;
     border-radius: 8px;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.3);     
+}
+
+/* FOOTER*/
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+
+    background-color: #2a2a2a;
+    color: #ffffff;
+    text-align: center;
+
+    padding: 2px 6px;   
+    font-size: 0.8em;   
+    line-height: 1.1;   
+    border-top: 1px solid #000;
+}
+
+/* Home page instruction*/
+.instruction {
+    margin-top: 20px;
+    padding: 15px;
+    background-color: rgba(255, 255, 255, 0.85);
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 1em;
+    line-height: 1.4;
+}
+.instruction ul {
+    margin-top: 10px;
+    padding-left: 20px;
+}
+
+/* DELETE BUTTON */
+.delete-btn {
+  display: block;              
+  margin: 0 auto;              
+  padding: 8px 16px;
+  background-color: #e74c3c;   
+  color: #fff;                 
+  border: none;                
+  border-radius: 6px;          
+  font-size: 0.95em;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.delete-btn:hover {
+  background-color: #c0392b;   
+  transform: scale(1.05);      
+}
+
+.delete-btn:active {
+  transform: scale(0.95);      
+}
+
+/* Search BUTTON */
+.search-btn {
+  padding: 10px 20px;
+  background-color: #3498db;   
+  color: #fff;                 
+  border: none;                
+  border-radius: 6px;          
+  font-size: 1em;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.search-btn:hover {
+  background-color: #2980b9;   
+  transform: scale(1.05);      
+}
+
+.search-btn:active {
+  transform: scale(0.95);      
 }
