--- a/Library. SZ/static/css/main.css
+++ b/Library. SZ/static/css/main.css
@@ -198,7 +198,7 @@ body.magazines h2 {
 /* SEARCH FORM*/
 .search-form {
     text-align: center;   
-    margin: 20px 0;       
+    margin: 60px 20px 20px 20px;       
 }
 
 .search-form input[type="text"] {
